--- a/src/app/modules/shared/sidebar/sidebar.component.html
+++ b/src/app/modules/shared/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
       [ngClass]="{'active' : accordions.isActive || buttons.isActive || badges.isActive || breadcrumbs.isActive || dropdowns.isActive || modals.isActive || notifications.isActive || progressbar.isActive || pagination.isActive || tabs.isActive || typography.isActive || tooltips.isActive }">
       <a class="nav-link" (click)="uiBasicCollapsed = !uiBasicCollapsed" [attr.aria-expanded]="uiBasicCollapsed"
         aria-controls="ui-basic">
-        <span class="menu-title">Basic UI Elements</span>
+        <span class="menu-title">{{ 'Data.BasicUiElements' | translate }}</span>
         <i class="menu-arrow"></i>
         <i class="mdi mdi-crosshairs-gps menu-icon"></i>
       </a>
@@ -59,29 +59,29 @@
     </li>
     <li class="nav-item" [ngClass]="{ 'active': forms.isActive }">
       <a class="nav-link" routerLink="forms/basic-elements" routerLinkActive #forms="routerLinkActive">
-        <span class="menu-title">Form elements</span>
+        <span class="menu-title">{{ 'Data.FormElements' | translate}}</span>
         <i class="mdi mdi-format-list-bulleted menu-icon"></i>
       </a>
     </li>
     <li class="nav-item" [ngClass]="{ 'active': charts.isActive }">
       <a class="nav-link" routerLink="charts/chartjs" routerLinkActive #charts="routerLinkActive">
-        <span class="menu-title">Charts</span>
+        <span class="menu-title">{{ 'Data.Charts' | translate}}</span>
         <i class="mdi mdi-chart-bar menu-icon"></i>
       </a>
     </li>
     <li class="nav-item" [ngClass]="{ 'active': tables.isActive }">
       <a class="nav-link" routerLink="tables/basic-table" routerLinkActive #tables="routerLinkActive">
-        <span class="menu-title">Tables</span>
+        <span class="menu-title">{{ 'Data.Tables' | translate}}</span>
         <i class="mdi mdi-table-large menu-icon"></i>
       </a>
     </li>
     <li class="nav-item" [ngClass]="{ 'active': icons.isActive }">
       <a class="nav-link" routerLink="icons/mdi" routerLinkActive #icons="routerLinkActive">
-        <span class="menu-title">Icons</span>
+        <span class="menu-title">{{ 'Data.Icons' | translate}}</span>
         <i class="mdi mdi-contacts menu-icon"></i>
       </a>
     </li>
-    <li class="nav-item"
+    <!-- <li class="nav-item"
       [ngClass]="{ 'active' : blankPage.isActive || login.isActive || register.isActive || error404.isActive || error500.isActive }">
       <a class="nav-link" (click)="samplePagesCollapsed = !samplePagesCollapsed"
         [attr.aria-expanded]="samplePagesCollapsed" aria-controls="auth">
@@ -103,6 +103,6 @@
               #error500="routerLinkActive"> 500 </a></li>
         </ul>
       </div>
-    </li>
+    </li> -->
   </ul>
 </nav>
