remove tabs component

--- a/src/app/modules/shared/sidebar/sidebar.component.html
+++ b/src/app/modules/shared/sidebar/sidebar.component.html
@@ -20,8 +20,10 @@
         <i class="mdi mdi-home menu-icon"></i>
       </a>
     </li>
-    <li class="nav-item"
-      [ngClass]="{'active' : accordions.isActive || buttons.isActive || badges.isActive || breadcrumbs.isActive || dropdowns.isActive || modals.isActive || notifications.isActive || progressbar.isActive || pagination.isActive || tabs.isActive || typography.isActive || tooltips.isActive }">
+    <li class="nav-item" [ngClass]="{'active' : accordions.isActive || buttons.isActive || badges.isActive || breadcrumbs.isActive
+       || dropdowns.isActive || modals.isActive || notifications.isActive || progressbar.isActive 
+       || pagination.isActive 
+       || typography.isActive || tooltips.isActive }">
       <a class="nav-link" (click)="uiBasicCollapsed = !uiBasicCollapsed" [attr.aria-expanded]="uiBasicCollapsed"
         aria-controls="ui-basic">
         <span class="menu-title">{{ 'Data.BasicUiElements' | translate }}</span>
@@ -48,8 +50,6 @@
               #progressbar="routerLinkActive">Progress bar</a></li>
           <li class="nav-item"> <a class="nav-link" routerLink="basic-ui/pagination" routerLinkActive="active"
               #pagination="routerLinkActive">Pagination</a></li>
-          <li class="nav-item"> <a class="nav-link" routerLink="basic-ui/tabs" routerLinkActive="active"
-              #tabs="routerLinkActive">Tabs</a></li>
           <li class="nav-item"> <a class="nav-link" routerLink="basic-ui/typography" routerLinkActive="active"
               #typography="routerLinkActive">Typography</a></li>
           <li class="nav-item"> <a class="nav-link" routerLink="basic-ui/tooltips" routerLinkActive="active"
